--- a/style.css
+++ b/style.css
@@ -1,9 +1,12 @@
 html, body {
-    margin: 0;
-    width: 100%;
+    width:  100%;
     height: 100%;
+
     overflow: hidden;
-    background-color: #000;
+
+    margin: 0;
+
+    background: #ffffff;
   }
 
   a:link, a:visited{
@@ -17,3 +20,9 @@ html, body {
     padding: 20px 0;
     color: #fff;
   }
+  #panolens-viewer
+  {
+    width:  100%;
+    height: 100%;
+  }
+ 
